--- a/assets/styles/common/_mixins.scss
+++ b/assets/styles/common/_mixins.scss
@@ -3,7 +3,10 @@ BREAKPOINTS
 *********************/
 
 @mixin breakpoint($point) {
-  @if $point == desktop {
+  @if $point == bigscreens {
+    @media (min-width: 1440px) { @content ; }
+  }
+  @else if $point == desktop {
     @media (min-width: 1200px) { @content ; }
   }
   @else if $point == laptop {
