--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -81,10 +81,34 @@ body{
   @extend %full-width-height;
   background-color: rgba($primary-color, 0.5);
 }
-.background-image-overlay-highlight-color{
+.background-image-overlay-accent1-color{
   @extend %full-width-height;
-  background-color: rgba($accent2-color, 0.5);
+  background-color: rgba($accent1-color, 0.8);
 }
+.background-image-overlay-accent2-color{
+  @extend %full-width-height;
+  background-color: rgba($accent2-color, 0.8);
+}
+
+
+.background-image-overlay-secondary-color{
+  @extend %full-width-height;
+  background-color: rgba($secondary-color, 0.8);
+}
+
+.background-image-overlay-secondary-color-dark{
+  @extend %full-width-height;
+  background-color: rgba($secondary-color, 0.9);
+}
+.background-image-overlay-accent1-gradient{
+  @extend %full-width-height;
+  background: rgba($accent1-color, 0.9); /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top, rgba($accent1-color, 0.9), $primary-color); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom, rgba($accent1-color, 0.9), $primary-color); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom, rgba($accent1-color, 0.9), $primary-color); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom, rgba($accent1-color, 0.9), $primary-color); /* Standard syntax */
+}
+
 
 /********************************************************************************
                                   GRADIENT
@@ -120,6 +144,15 @@ body{
   background: linear-gradient(-90deg, #343434, $primary-color); /* Standard syntax */
 }
 
+
+.gradient-5{
+  background: $base-color; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top, $accent1-color, $primary-color); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom, $accent1-color, $primary-color); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom, $accent1-color, $primary-color); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom, $accent1-color, $primary-color); /* Standard syntax */
+}
+
 /********************************************************************************
                                 < A > COLOUR VAR
 ********************************************************************************/
@@ -151,6 +184,16 @@ body{
   }
 }
 
+.base-color-hover{
+  i,p{
+    transition: 0.2s opacity;
+  }
+  &:hover{
+    i,p{
+      opacity: 0.8;
+    }
+  }
+}
 
 /********************************************************************************
                                   HEADER HEIGHT VARS
