--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -7,8 +7,8 @@
 .footer{
   width: 100vw;
   height: 50vh;
-  position: absolute;
   left: 0;
+  position: relative;
   .container{
     height: 50vh;
     @include flexbox();
@@ -19,5 +19,54 @@
       @include flex-direction(row);
     }
   }
+  .server{
+    position: absolute;
+    bottom:50%;
+    transform: translate(0, 50%);
+    left: 0;
+    background-color: $base-color;
+    padding: 5px;
+    width: 90%;
+    text-align: center;
+    @include border($base-color);
+    @include breakpoint(laptop){
+      width: 250px;
+      bottom:0;
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
+    img{
+      display: inline-block;
+      width: 20px;
+      @include breakpoint(laptop){
+        display: block;
+        margin: 15px auto;
+        width: 50px;
+      }
+    }
+    p{
+      display: inline-block;
+      color: $primary-color;
+      @include breakpoint(laptop){
+        display: inline;
+       font-size: 1em;
+      }
+    }
+  }
 }
 
+.footer-work{
+  width: 100%;
+  height: 50vh;
+  @include flexbox();
+  @include flex-direction(row);
+  @include justify-content(space-between);
+  .col{
+    width: 48%;
+    height: 50vh;
+    @include flexbox();
+    @include flex-direction(row);
+    @include align-items(center);
+    @include justify-content(center);
+  }
+}
