--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -55,6 +55,15 @@ html{
   margin-right: auto;
 }
 
+.work-wdw{
+  .container{
+    width: 90%;
+    //max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 section{
   margin: 50px 0;
 }
@@ -134,6 +143,11 @@ hr{
 
 .full-width{
   width: 100% !important;
+}
+
+.full-size-img{
+  width: 100%;
+  height: 70vh;
 }
 
 /********************************************************************************
@@ -941,7 +955,7 @@ spaceship:              9999
    &.work-xs{
      height: 200px;
      img {
-       max-height: 200px;
+       max-height: 150px;
      }
    }
     text-align: center;
@@ -1028,7 +1042,7 @@ spaceship:              9999
           right: 0;
           height: 300px;
           img{
-            max-height: 300px;
+            max-height: 250px;
           }
         }
         display: inline-block;
@@ -1064,7 +1078,7 @@ spaceship:              9999
         &:nth-child(2){
           height:370px;
           img{
-            max-height: 370px;
+            max-height: 300px;
           }
         }
       }
@@ -1097,71 +1111,116 @@ spaceship:              9999
   h1{
     margin: 1.5em 0;
   }
-}
-
-.work-info{
-  width: 100%;
-  @include flexbox();
-  @include flex-direction(column);
-  margin-bottom: 2em;
-  @include breakpoint(tablet){
-    @include flex-direction(row);
-    @include justify-content(space-between)
-  }
-  .col{
-    width: 100%;
-    @include breakpoint(tablet){
-      width: 49%;
+  .work-img{
+    img{
+      width: 90%;
+      max-width: 500px;
+      margin: 50px 0;
+      &.img-xs{
+        margin: 100px 0;
+        max-width: 350px;
+      }
+      &.img-xl{
+        margin: 100px 0;
+        max-width: 800px;
+      }
+      &.img-large{
+        max-width: 800px;
+      }
     }
   }
-}
-
-.tech-box{
-  width: 100%;
-  margin-top: 2em;
-  margin-bottom: 2em;
-  .tech-icons{
-    margin: 2em 0;
+  .work-info{
     width: 100%;
     @include flexbox();
     @include flex-direction(column);
-    @include align-items(center);
-    @include justify-content(center);
-    img{
-      width: 100%;
-      max-width: 100px;
-    }
-    svg{
-      width: 100px;
-      height: 100px;
-      &:nth-child(3n-1){
-        path{
-          fill: $accent2-color;
-        }
-      }
-      &:nth-child(3n+0){
-        path{
-          fill: $accent1-color;
-        }
-      }
-      path{
-        fill: $primary-color;
-        &.white{
-          fill: $base-color;
-        }
-      }
-
-    }
-    @include breakpoint(mobilelandscape){
+    margin-bottom: 70px;
+    @include breakpoint(tablet){
       @include flex-direction(row);
       @include justify-content(space-between);
     }
+    @include breakpoint(bigscreens){
+      @include flex-direction(column);
+      @include align-items(flex-end);
+      width: 30%;
+    }
+    .col{
+      width: 100%;
+      @include breakpoint(tablet){
+        width: 49%;
+      }
+      @include breakpoint(bigscreens){
+        width: 100%;
+      }
+    }
   }
+  .work-start-container{
+    @include breakpoint(bigscreens){
+      @include flexbox();
+      @include flex-direction(row);
+      @include justify-content(space-between);
+      @include align-items(space-between);
+    }
+    .first-img{
+      @include breakpoint(bigscreens){
+        width: 60%;
+      }
+    }
+  }
+  .tech-box{
+    width: 100%;
+    margin: 100px 0;
+    .tech-icons{
+      margin: 50px 0 0 0;
+      width: 100%;
+      @include flexbox();
+      @include flex-direction(column);
+      @include align-items(center);
+      @include justify-content(center);
+      img{
+        width: 100%;
+        max-width: 100px;
+      }
+      svg{
+        width: 100px;
+        height: 100px;
+        margin-bottom: 15px;
+        &:nth-child(3n-1){
+          path{
+            fill: $accent2-color;
+          }
+        }
+        &:nth-child(3n+0){
+          path{
+            fill: $accent1-color;
+          }
+        }
+        path{
+          fill: $primary-color;
+          &.white{
+            fill: $base-color;
+          }
+        }
+        @include breakpoint(mobilelandscape){
+          margin-bottom: 0;
+        }
+      }
+      @include breakpoint(mobilelandscape){
+        @include flex-direction(row);
+        @include justify-content(space-between);
+      }
+    }
+  }
+
 }
 
-.full-size-img{
-  width: 100%;
-  height: 70vh;
+.flex-bottom{
+  @include flexbox();
+  @include flex-direction(row);
+  @include align-items(flex-end);
+  @include justify-content(center);
+  img{
+    margin: 50px 0 0 0 !important;
+  }
 }
 
 /********************************************************************************
