--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -57,16 +57,24 @@
 
 .footer-work{
   width: 100%;
-  height: 50vh;
-  @include flexbox();
-  @include flex-direction(row);
-  @include justify-content(space-between);
-  .col{
-    width: 48%;
+  @include breakpoint(tablet){
     height: 50vh;
+    @include flexbox();
+    @include flex-direction(row);
+    @include justify-content(space-between);
+  }
+  .col{
+    height: 50vh;
+    max-height: 300px;
+    width: 100%;
     @include flexbox();
     @include flex-direction(row);
     @include align-items(center);
     @include justify-content(center);
+    @include breakpoint(tablet){
+      max-height: none;
+      width: 48%;
+
+    }
   }
 }
