--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -48,6 +48,10 @@ html{
   overflow-x: hidden;
 }
 
+body,html{
+  cursor: auto;
+}
+
 .container{
   width: 95%;
   //max-width: 1200px;
@@ -801,6 +805,11 @@ spaceship:              9999
 
 ********************************************************************************/
 
+#besideMouse{
+  z-index:100000000000000;
+  position:fixed;
+}
+
 .work-wdw{
   display: none;
 
@@ -813,6 +822,8 @@ spaceship:              9999
   width: 100%;
   overflow-y: scroll;
   background-color: $base-color;
+
+  cursor: url('../images/cross.png'), auto;
   &.open{
     display: block;
 
