--- a/assets/styles/components/_icons.scss
+++ b/assets/styles/components/_icons.scss
@@ -11,8 +11,8 @@
   position: relative;
   .copyright-icon{
     position: absolute;
-    top: 3px;
-    left: -15px;
+    //top: 3px;
+    left: -20px;
   }
 }
 
